Update | send metadata ok

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -11,15 +11,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWMDZr2F7Hrd",
-        "outputId": "8e5a328d-e20e-478c-ee4e-6fae659899b5"
+        "outputId": "05fc808e-b162-4c30-af20-8ab1dc36c5f7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -27,15 +35,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJYWdoMT7iEM",
-        "outputId": "c8a1bbc2-f6c7-43b7-b1aa-5a7161c53ee7"
+        "outputId": "18761fde-3d5e-44be-d023-e644192b79dc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[0m\u001b[01;34malerts\u001b[0m/  \u001b[01;34malerts.\u001b[0m/  \u001b[01;34mmodels\u001b[0m/  Process_Video.ipynb  \u001b[01;34mvideo\u001b[0m/\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "dir_origin = '/content/drive/MyDrive/Smartech/MinaRumas/'\n",
@@ -46,15 +62,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PvmE9UsQ7hxl",
-        "outputId": "a61bf7fe-84a4-4e92-d55f-7fa0a77a3596"
+        "outputId": "e36e91e5-9be5-40e6-b458-a3ebe99aced8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ultralytics 8.3.153 🚀 Python-3.11.13 torch-2.6.0+cu124 CUDA:0 (Tesla T4, 15095MiB)\n",
+            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 44.9/112.6 GB disk)\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install ultralytics\n",
         "import ultralytics\n",
@@ -63,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "lkZP2CrZTBgi"
       },
@@ -116,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "laJqiBgXpqzm"
       },
@@ -132,7 +157,8 @@
         "from datetime import datetime\n",
         "import os\n",
         "from collections import defaultdict, deque\n",
-        "import base64\n"
+        "import base64\n",
+        "import requests\n"
       ]
     },
     {
@@ -146,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "id": "Yfv8q9mI7m06"
       },
@@ -172,6 +198,7 @@
         "            detection_zone: Polígono que define la zona de detección\n",
         "            camera_sn: Número de serie de la cámara\n",
         "        \"\"\"\n",
+        "        self.api_url = \"https://fn-alma-mina.azurewebsites.net/api/alert\"\n",
         "        self.model_det = YOLO(model_det_path)\n",
         "        self.model_seg = YOLO(model_seg_path)\n",
         "        self.detection_zone = detection_zone\n",
@@ -199,6 +226,17 @@
         "\n",
         "        # Crear carpeta de alertas\n",
         "        self.setup_alerts_folder()\n",
+        "    def send_metadata(self, metadata):\n",
+        "        #print(f\"Metadata a enviar: {metadata}\")\n",
+        "        print(f\"Metadata a enviar:  pesa demasiado\")\n",
+        "        try:\n",
+        "            response = requests.post(self.api_url, json=metadata)\n",
+        "            if response.status_code == 200:\n",
+        "                print(\"Metadata enviada con éxito.\")\n",
+        "            else:\n",
+        "                print(f\"Error al enviar metadata: {response.status_code}, {response.text}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error al conectar con la API: {e}\")\n",
         "\n",
         "    def setup_alerts_folder(self):\n",
         "        \"\"\"Crea la estructura de carpetas para alertas\"\"\"\n",
@@ -359,8 +397,10 @@
         "            \"alert_type\": alert_type,\n",
         "            \"timestamp\": timestamp.strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
         "            \"frame\": frame_base64,\n",
-        "            \"enterprise\": self.enterprise  #\n",
+        "            \"enterprise\": 'alma'# 'falcon crest' #self.enterprise\n",
         "        }\n",
+        "        if hasattr(self, 'send_metadata'):\n",
+        "              self.send_metadata(alert_data)\n",
         "\n",
         "        # Nombre del archivo (por ejemplo para auditoría local)\n",
         "        base_filename = f\"{timestamp.strftime('%H-%M-%S')}_{alert_type}_{frame_count}\"\n",
@@ -371,7 +411,7 @@
         "        with open(json_path, 'w') as f:\n",
         "            json.dump(alert_data, f, indent=2)\n",
         "\n",
-        "        print(f\"Alerta guardada: {alert_type} - {timestamp.strftime('%H:%M:%S')}\")\n",
+        "        #print(f\"Alerta guardada: {alert_type} - {timestamp.strftime('%H:%M:%S')}\")\n",
         "\n",
         "\n",
         "    def save_alert2(self, alert_type, frame_with_drawings, frame_count, fps):\n",
@@ -503,9 +543,12 @@
         "\n",
         "                            if ruma.was_interacting and not is_interacting:\n",
         "                              object_interaction_ended = True\n",
+        "                              draw_object_interacting = True\n",
         "\n",
         "                            if is_interacting and not ruma.was_interacting:\n",
         "                              object_interacting = True\n",
+        "                              draw_object_interacting = True\n",
+        "\n",
         "\n",
         "                            # 3. Guardar estado actual para el siguiente frame\n",
         "                            ruma.was_interacting = is_interacting\n",
@@ -666,7 +709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
         "id": "7CRsiK6Dp7pe"
       },
@@ -755,30 +798,236 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 391
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5LTLU6_cp_mf",
-        "outputId": "8a8ccd58-b70e-4bc7-f610-4cb40f94f199"
+        "outputId": "407060c2-68fc-4569-e18c-1f76570243c2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Video: 1920x1080 @ 30.00169290672084 FPS\n",
+            "Procesando frames 0 a 8700\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: movimiento_zona - 06:56:03\n",
+            "Procesados 0 frames\n",
+            "Rumas activas: 0\n",
+            "Nueva ruma creada: ID 1\n",
+            "Nueva ruma creada: ID 2\n",
+            "Nueva ruma creada: ID 3\n",
+            "Nueva ruma creada: ID 4\n",
+            "Nueva ruma creada: ID 5\n",
+            "Nueva ruma creada: ID 6\n",
+            "Nueva ruma creada: ID 7\n",
+            "Nueva ruma creada: ID 8\n",
+            "Procesados 50 frames\n",
+            "Rumas activas: 8\n",
+            "Procesados 100 frames\n",
+            "Rumas activas: 8\n",
+            "Nueva ruma creada: ID 9\n",
+            "Procesados 150 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 200 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 250 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 300 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 350 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 400 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 450 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 500 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 550 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 600 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 650 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 700 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 750 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 800 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 850 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 900 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 950 frames\n",
+            "Rumas activas: 9\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 06:59:59\n",
+            "Procesados 1000 frames\n",
+            "Rumas activas: 9\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 07:00:10\n",
+            "Procesados 1050 frames\n",
+            "Rumas activas: 9\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 07:00:29\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: variacion_rumas - 07:00:32\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: variacion_rumas - 07:00:33\n",
+            "Procesados 1100 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 1150 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 1200 frames\n",
+            "Rumas activas: 9\n",
+            "Procesados 1250 frames\n",
+            "Rumas activas: 9\n",
+            "Nueva ruma creada: ID 10\n",
+            "Procesados 1300 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1350 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1400 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1450 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1500 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1550 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1600 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1650 frames\n",
+            "Rumas activas: 10\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 07:02:51\n",
+            "Procesados 1700 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1750 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 1800 frames\n",
+            "Rumas activas: 10\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 07:03:30\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: variacion_rumas - 07:03:33\n",
+            "Procesados 1850 frames\n",
+            "Rumas activas: 10\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: variacion_rumas - 07:03:52\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 07:03:53\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: variacion_rumas - 07:03:55\n",
+            "Procesados 1900 frames\n",
+            "Rumas activas: 10\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 07:04:05\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: variacion_rumas - 07:04:06\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: interaccion_rumas - 07:04:08\n",
+            "Procesados 1950 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2000 frames\n",
+            "Rumas activas: 10\n",
+            "Metadata a enviar:  pesa demasiado\n",
+            "Metadata enviada con éxito.\n",
+            "Alerta guardada: variacion_rumas - 07:04:25\n",
+            "Procesados 2050 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2100 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2150 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2200 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2250 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2300 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2350 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2400 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2450 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2500 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2550 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2600 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2650 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2700 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2750 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2800 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2850 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2900 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 2950 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 3000 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 3050 frames\n",
+            "Rumas activas: 10\n",
+            "Procesados 3100 frames\n",
+            "Rumas activas: 10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ejemplo de uso\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Process video, no --\n",
         "if __name__ == \"__main__\":\n",
-        "    video_path = 'video/video_demo_3.mp4'\n",
+        "    video_path = 'video/video_cam1_v2.mp4'\n",
         "    output_path = generar_ruta_salida(video_path)\n",
-        "    start_time_sec = 15\n",
-        "    end_time_sec = 65\n",
+        "    start_time_sec = 0# 10\n",
+        "    end_time_sec =290 # 100\n",
         "\n",
         "    model_det_path = 'models/model_detection.pt'\n",
         "    model_seg_path = 'models/model_segmentation.pt'\n",
         "\n",
-        "    detection_zone = np.array([\n",
-        "        [20, 691], [18, 779], [414, 881], [709, 759],\n",
-        "        [1675, 1060], [1902, 890], [1902, 667], [704, 416]\n",
-        "    ], np.int32) # Cambiar las coordenadas de las zonas segun la camara, input de process_video (se puede setear en un .yml)\n",
-        "\n",
         "    camera_number = 1  # Cambiar según la cámara\n",
+        "    if camera_number ==1: ## donde la ruma estan esparcidas en un campo\n",
+        "      detection_zone = np.array([\n",
+        "          [20, 691], [18, 779], [414, 881], [709, 759],\n",
+        "          [1675, 1060], [1902, 890], [1902, 667], [704, 416]\n",
+        "          ], np.int32) # Cambiar las coordenadas de las zonas segun la camara, input de process_video (se puede setear en un .yml)\n",
+        "    elif camera_number ==2: # se puede ver la escalera o faja\n",
+        "      detection_zone = np.array([\n",
+        "          [1740,533],[1788,1075],[741,1074],[433,591],[400,480],[536,442],[1008,365],[1061,398],[1128,389],[1214,431],[1369,397]\n",
+        "          ], np.int32) # Cambiar las coordenadas de las zonas segun la camara, input de process_video (se puede setear en un .yml)\n",
+        "    elif camera_number ==3:\n",
+        "      detection_zone = np.array([\n",
+        "          [1862,767],[1443,633],[794,1077],[123,1072],[3,711],[4,517],[1122,256],[1893,450],[1860,534],[1873,611],[1855,689]\n",
+        "          ], np.int32) # Cambiar las coordenadas de las zonas segun la camara, input de process_video (se puede setear en un .yml)\n",
+        "\n",
+        "\n",
         "\n",
         "    process_video(\n",
         "        video_path, output_path, start_time_sec, end_time_sec,\n",
@@ -793,14 +1042,15 @@
         "id": "iMPS6rAu8wZf"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "\n"
+      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
-        "BQyC0cTwSiCv",
         "EmaW4xgxS0OT"
       ],
       "gpuType": "T4",
