refactor: Update Process_Video.ipynb to improve structure and clarity, including markdown enhancements and code organization

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Colab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -41,15 +48,6 @@
     "sys.path.append('/content/drive/MyDrive/Smartech/MinaRumas')\n",
     "\n",
     "!ls"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Sa1TW7HnSec_"
-   },
-   "source": [
-    "# Install paquetes python"
    ]
   },
   {
@@ -91,200 +89,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2rQCYe3-Sj-o"
-   },
+   "metadata": {},
    "source": [
-    "## Import"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 9917,
-     "status": "ok",
-     "timestamp": 1752335154111,
-     "user": {
-      "displayName": "Abcd Cain",
-      "userId": "14510525189878990256"
-     },
-     "user_tz": 300
-    },
-    "id": "GCQqmvuQUtwn"
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import cv2\n",
-    "import time\n",
-    "import json\n",
-    "import base64\n",
-    "import torch\n",
-    "import requests\n",
-    "import numpy as np\n",
-    "from datetime import datetime\n",
-    "from pathlib import Path\n",
-    "from ultralytics import YOLO\n",
-    "from collections import defaultdict, deque\n",
-    "\n",
-    "# 👇 SOLO EJECUTA UNA VEZ\n",
-    "#%load_ext autoreload\n",
-    "#%autoreload 2\n",
-    "\n",
-    "\n",
-    "#Import librerias propias\n",
-    "from utils.paths import generar_ruta_salida # generar los path acorde a la hora\n",
-    "from monitor.ruma_monitor import RumaMonitor # clase Ruma Monitor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 53
-    },
-    "executionInfo": {
-     "elapsed": 62,
-     "status": "ok",
-     "timestamp": 1752335154177,
-     "user": {
-      "displayName": "Abcd Cain",
-      "userId": "14510525189878990256"
-     },
-     "user_tz": 300
-    },
-    "id": "SJHfyteVwXQ7",
-    "outputId": "50035f52-21ce-4c7b-badc-4afe6b02ab2f"
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "!grep \"class \" /content/drive/MyDrive/Smartech/MinaRumas/monitor/ruma_monitor.py\n",
-    "!python3 -m py_compile /content/drive/MyDrive/Smartech/MinaRumas/monitor/ruma_monitor.py\n",
-    "print(\"ok\")\n",
-    "!python3 -m py_compile monitor/ruma_monitor.py\n",
-    "!python3 /content/drive/MyDrive/Smartech/MinaRumas/monitor/ruma_monitor.py\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "wU7slVuGStDq"
-   },
-   "source": [
-    "# Ruma logic"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "EmaW4xgxS0OT"
-   },
-   "source": [
-    "# Process video"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 36,
-     "status": "ok",
-     "timestamp": 1752335340598,
-     "user": {
-      "displayName": "Abcd Cain",
-      "userId": "14510525189878990256"
-     },
-     "user_tz": 300
-    },
-    "id": "7CRsiK6Dp7pe"
-   },
-   "outputs": [],
-   "source": [
-    "def process_video(video_path, output_path, start_time_sec, end_time_sec,\n",
-    "                 model_det_path, model_seg_path, detection_zone, camera_number):\n",
-    "    \"\"\"\n",
-    "    Procesa un video completo usando el monitor de rumas\n",
-    "\n",
-    "    Args:\n",
-    "        video_path: Ruta del video de entrada\n",
-    "        output_path: Ruta del video de salida\n",
-    "        start_time_sec: Tiempo de inicio en segundos\n",
-    "        end_time_sec: Tiempo de fin en segundos\n",
-    "        model_det_path: Ruta del modelo de detección\n",
-    "        model_seg_path: Ruta del modelo de segmentación\n",
-    "        detection_zone: Zona de detección como array numpy\n",
-    "        camera_number: Número de cámara (1, 2, o 3)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Mapear número de cámara a serial\n",
-    "    camera_serials = {\n",
-    "        1: \"DS-7104NI-Q1-1\",\n",
-    "        2: \"DS-7104NI-Q1-2\",\n",
-    "        3: \"DS-7104NI-Q1-3\"\n",
-    "    }\n",
-    "\n",
-    "    camera_sn = camera_serials.get(camera_number, \"DS-7104NI-Q1-1\")\n",
-    "\n",
-    "    # Inicializar monitor\n",
-    "    monitor = RumaMonitor(model_det_path, model_seg_path, detection_zone, camera_sn)\n",
-    "\n",
-    "    # Configurar video\n",
-    "    cap = cv2.VideoCapture(video_path)\n",
-    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "    width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "    height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "\n",
-    "    print(f\"Video: {width}x{height} @ {fps} FPS\")\n",
-    "\n",
-    "    out = cv2.VideoWriter(output_path, cv2.VideoWriter_fourcc(*'mp4v'), fps, (width, height))\n",
-    "\n",
-    "    start_frame = int(start_time_sec * fps)\n",
-    "    end_frame = int(end_time_sec * fps)\n",
-    "\n",
-    "    print(f\"Procesando frames {start_frame} a {end_frame}\")\n",
-    "\n",
-    "    frame_count = 0\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        while cap.isOpened():\n",
-    "            ret, frame = cap.read()\n",
-    "            if not ret or frame_count > end_frame:\n",
-    "                break\n",
-    "\n",
-    "            if frame_count >= start_frame:\n",
-    "                # Procesar frame\n",
-    "                processed_frame = monitor.process_frame(frame, frame_count, fps)\n",
-    "                out.write(processed_frame)\n",
-    "\n",
-    "                # Progreso\n",
-    "                if frame_count % 50 == 0:\n",
-    "                    print(f\"Procesados {frame_count} frames\")\n",
-    "                    #print(f\"Rumas activas: {sum(1 for r in monitor.rumas.values() if r.is_active)}\")\n",
-    "                    print(f\"Rumas activas: {sum(1 for r in monitor.tracker.rumas.values() if r.is_active)}\")\n",
-    "\n",
-    "\n",
-    "            frame_count += 1\n",
-    "\n",
-    "    cap.release()\n",
-    "    out.release()\n",
-    "    print(f\"Procesamiento completado. Video guardado en {output_path}\")\n",
-    "    print(f\"Total de rumas detectadas: {len(monitor.rumas)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "zVr4brZaTFCV"
-   },
-   "source": [
-    "# Uso de lógica"
+    "## prueba"
    ]
   },
   {
@@ -302,9 +109,9 @@
     "# Process video, no --\n",
     "if __name__ == \"__main__\":\n",
     "    video_path = 'video/video_cam3_0422.mp4'\n",
-    "    output_path = generar_ruta_salida(video_path)\n",
+    "    output_path = generar_output_video(video_path)\n",
     "    start_time_sec = 0# 10\n",
-    "    end_time_sec =120 # 100\n",
+    "    end_time_sec =2 # 120\n",
     "\n",
     "    model_det_path = 'models/model_detection.pt'\n",
     "    model_seg_path = 'models/model_segmentation.pt'\n",
@@ -331,6 +138,134 @@
     "        model_det_path, model_seg_path, detection_zone, camera_number\n",
     "    )\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## pruerba final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import time\n",
+    "import json\n",
+    "import base64\n",
+    "import torch\n",
+    "import requests\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "from pathlib import Path\n",
+    "from collections import defaultdict, deque\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "# Librerías propias\n",
+    "from utils.paths import generar_output_video\n",
+    "from libs.main_functions import process_video, load_camera_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de cámara: 3\n",
+      "Output video path: video/output/video_cam3_0422_processed.mp4\n",
+      "Output video path: video\\output\\video_cam3_0422\\output_video_cam3_0422_20250712_1807.mp4\n",
+      "Video: 1920x1080 @ 30.00 FPS\n",
+      "Procesando frames 0 a 360\n",
+      "Procesados 0 frames\n",
+      "Rumas activas: 0\n",
+      "💾 Save alert local ejecutándose\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:08:16\n",
+      "Nueva ruma creada: ID 1\n",
+      "Nueva ruma creada: ID 2\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-08-45_ruma_summary_18.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:08:45\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-09-04_ruma_summary_28.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:09:04\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-09-12_ruma_summary_32.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:09:12\n",
+      "Nueva ruma creada: ID 3\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-09-31_ruma_summary_42.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:09:31\n",
+      "Nueva ruma creada: ID 4\n",
+      "Procesados 50 frames\n",
+      "Rumas activas: 4\n",
+      "Nueva ruma creada: ID 5\n",
+      "Procesados 100 frames\n",
+      "Rumas activas: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def main():\n",
+    "    start_time_sec = 0\n",
+    "    end_time_sec = 12\n",
+    "    camera_number = 3\n",
+    "\n",
+    "    try:\n",
+    "        input_video, _, polygons, camera_sn, _ = load_camera_config(\n",
+    "            camera_number, config_path=\"mkdocs.yml\"\n",
+    "        )\n",
+    "        output_video = generar_output_video(input_video)\n",
+    "        print(f\"Procesando video: {input_video}\")\n",
+    "        print(f\"Salida: {output_video}\")\n",
+    "    except ValueError as e:\n",
+    "        print(f\"[Error] {e}\")\n",
+    "        return\n",
+    "\n",
+    "    model_det_path = 'models/model_detection.pt'\n",
+    "    model_seg_path = 'models/model_segmentation.pt'\n",
+    "\n",
+    "    process_video(\n",
+    "        video_path=input_video,\n",
+    "        output_path=output_video,\n",
+    "        start_time_sec=start_time_sec,\n",
+    "        end_time_sec=end_time_sec,\n",
+    "        model_det_path=model_det_path,\n",
+    "        model_seg_path=model_seg_path,\n",
+    "        detection_zone=polygons,\n",
+    "        camera_number=camera_number,\n",
+    "        camera_serials=camera_sn\n",
+    "    )\n",
+    "\n",
+    "    print(\"\\n=== Procesamiento finalizado correctamente ===\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "!grep \"class \" /content/drive/MyDrive/Smartech/MinaRumas/monitor/ruma_monitor.py\n",
+    "!python3 -m py_compile /content/drive/MyDrive/Smartech/MinaRumas/monitor/ruma_monitor.py\n",
+    "print(\"ok\")\n",
+    "!python3 -m py_compile monitor/ruma_monitor.py\n",
+    "!python3 /content/drive/MyDrive/Smartech/MinaRumas/monitor/ruma_monitor.py\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
@@ -347,7 +282,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.11"
   }
  },
