refactor: Update import statements and enhance logging output in Process_Video.ipynb

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -167,12 +167,13 @@
     "\n",
     "# Librerías propias\n",
     "from utils.paths import generar_output_video\n",
-    "from libs.main_functions import process_video, load_camera_config"
+    "from libs.main_functions import process_video\n",
+    "from libs.config_loader import load_camera_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +209,97 @@
       "Rumas activas: 4\n",
       "Nueva ruma creada: ID 5\n",
       "Procesados 100 frames\n",
-      "Rumas activas: 5\n"
+      "Rumas activas: 5\n",
+      "Procesados 150 frames\n",
+      "Rumas activas: 5\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-13-50_ruma_summary_163.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:13:50\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-13-50_ruma_summary_163.jpg\n",
+      "✅ Alerta local guardada: interaccion_rumas - 18:13:50\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-13-56_ruma_summary_166.jpg\n",
+      "✅ Alerta local guardada: variacion_rumas - 18:13:56\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-06_ruma_summary_170.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:14:06\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-06_ruma_summary_170.jpg\n",
+      "✅ Alerta local guardada: interaccion_rumas - 18:14:06\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-08_ruma_summary_171.jpg\n",
+      "✅ Alerta local guardada: variacion_rumas - 18:14:08\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-12_ruma_summary_173.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:14:12\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-28_ruma_summary_180.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:14:28\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-34_ruma_summary_183.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:14:34\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-50_ruma_summary_190.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:14:50\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-50_ruma_summary_190.jpg\n",
+      "✅ Alerta local guardada: interaccion_rumas - 18:14:50\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-57_ruma_summary_194.jpg\n",
+      "✅ Alerta local guardada: variacion_rumas - 18:14:57\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-02_ruma_summary_196.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:15:02\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-02_ruma_summary_196.jpg\n",
+      "✅ Alerta local guardada: interaccion_rumas - 18:15:02\n",
+      "Nueva ruma creada: ID 6\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-06_ruma_summary_198.jpg\n",
+      "✅ Alerta local guardada: variacion_rumas - 18:15:06\n",
+      "Procesados 200 frames\n",
+      "Rumas activas: 6\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-18_ruma_summary_204.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:15:18\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-59_ruma_summary_223.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:15:59\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-16-15_ruma_summary_230.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:16:15\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-16-24_ruma_summary_234.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:16:24\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-16-27_ruma_summary_236.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:16:27\n",
+      "Procesados 250 frames\n",
+      "Rumas activas: 6\n",
+      "Procesados 300 frames\n",
+      "Rumas activas: 6\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-19-42_ruma_summary_323.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:19:42\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-20-14_ruma_summary_338.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:20:14\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-20-22_ruma_summary_342.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:20:22\n",
+      "Procesados 350 frames\n",
+      "Rumas activas: 6\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-20-49_ruma_summary_355.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:20:49\n",
+      "💾 Save alert local ejecutándose\n",
+      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-21-00_ruma_summary_360.jpg\n",
+      "✅ Alerta local guardada: movimiento_zona - 18:21:00\n",
+      "Procesamiento completado. Video guardado en video\\output\\video_cam3_0422\\output_video_cam3_0422_20250712_1807.mp4\n",
+      "Total de rumas detectadas: 6\n",
+      "\n",
+      "=== Resultados Finales ===\n"
      ]
     }
    ],
