--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -91,59 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## prueba"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "5LTLU6_cp_mf",
-    "outputId": "2ef9d336-ebf2-4513-8ffa-2e0fc978ab60"
-   },
-   "outputs": [],
-   "source": [
-    "# Process video, no --\n",
-    "if __name__ == \"__main__\":\n",
-    "    video_path = 'video/video_cam3_0422.mp4'\n",
-    "    output_path = generar_output_video(video_path)\n",
-    "    start_time_sec = 0# 10\n",
-    "    end_time_sec =2 # 120\n",
-    "\n",
-    "    model_det_path = 'models/model_detection.pt'\n",
-    "    model_seg_path = 'models/model_segmentation.pt'\n",
-    "\n",
-    "    camera_number = 3  # Cambiar según la cámara\n",
-    "\n",
-    "    if camera_number ==1: ## donde la ruma estan esparcidas en un campo\n",
-    "      detection_zone = np.array([\n",
-    "          [20, 691], [18, 779], [414, 881], [709, 759],\n",
-    "          [1675, 1060], [1902, 890], [1902, 667], [704, 416]\n",
-    "          ], np.int32) # Cambiar las coordenadas de las zonas segun la camara, input de process_video (se puede setear en un .yml)\n",
-    "    elif camera_number ==2: # se puede ver la escalera o faja\n",
-    "      detection_zone = np.array([\n",
-    "          [1740,533],[1788,1075],[741,1074],[433,591],[400,480],[536,442],[1008,365],[1061,398],[1128,389],[1214,431],[1369,397]\n",
-    "          ], np.int32) # Cambiar las coordenadas de las zonas segun la camara, input de process_video (se puede setear en un .yml)\n",
-    "    elif camera_number ==3:\n",
-    "      detection_zone = np.array([\n",
-    "          [1862,767],[1443,633],[794,1077],[123,1072],[3,711],[4,517],[1122,256],[1893,450],[1860,534],[1873,611],[1855,689]\n",
-    "          ], np.int32) # Cambiar las coordenadas de las zonas segun la camara, input de process_video (se puede setear en un .yml)\n",
-    "\n",
-    "\n",
-    "    process_video(\n",
-    "        video_path, output_path, start_time_sec, end_time_sec,\n",
-    "        model_det_path, model_seg_path, detection_zone, camera_number\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## pruerba final"
+    "## Prueba"
    ]
   },
   {
@@ -167,145 +115,16 @@
     "\n",
     "# Librerías propias\n",
     "from utils.paths import generar_output_video\n",
-    "from libs.main_functions import process_video\n",
-    "from libs.config_loader import load_camera_config"
+    "from libs.config_loader import load_camera_config\n",
+    "from libs.main_functions import process_video"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numero de cámara: 3\n",
-      "Output video path: video/output/video_cam3_0422_processed.mp4\n",
-      "Output video path: video\\output\\video_cam3_0422\\output_video_cam3_0422_20250712_1807.mp4\n",
-      "Video: 1920x1080 @ 30.00 FPS\n",
-      "Procesando frames 0 a 360\n",
-      "Procesados 0 frames\n",
-      "Rumas activas: 0\n",
-      "💾 Save alert local ejecutándose\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:08:16\n",
-      "Nueva ruma creada: ID 1\n",
-      "Nueva ruma creada: ID 2\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-08-45_ruma_summary_18.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:08:45\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-09-04_ruma_summary_28.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:09:04\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-09-12_ruma_summary_32.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:09:12\n",
-      "Nueva ruma creada: ID 3\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-09-31_ruma_summary_42.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:09:31\n",
-      "Nueva ruma creada: ID 4\n",
-      "Procesados 50 frames\n",
-      "Rumas activas: 4\n",
-      "Nueva ruma creada: ID 5\n",
-      "Procesados 100 frames\n",
-      "Rumas activas: 5\n",
-      "Procesados 150 frames\n",
-      "Rumas activas: 5\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-13-50_ruma_summary_163.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:13:50\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-13-50_ruma_summary_163.jpg\n",
-      "✅ Alerta local guardada: interaccion_rumas - 18:13:50\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-13-56_ruma_summary_166.jpg\n",
-      "✅ Alerta local guardada: variacion_rumas - 18:13:56\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-06_ruma_summary_170.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:14:06\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-06_ruma_summary_170.jpg\n",
-      "✅ Alerta local guardada: interaccion_rumas - 18:14:06\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-08_ruma_summary_171.jpg\n",
-      "✅ Alerta local guardada: variacion_rumas - 18:14:08\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-12_ruma_summary_173.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:14:12\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-28_ruma_summary_180.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:14:28\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-34_ruma_summary_183.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:14:34\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-50_ruma_summary_190.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:14:50\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-50_ruma_summary_190.jpg\n",
-      "✅ Alerta local guardada: interaccion_rumas - 18:14:50\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-14-57_ruma_summary_194.jpg\n",
-      "✅ Alerta local guardada: variacion_rumas - 18:14:57\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-02_ruma_summary_196.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:15:02\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-02_ruma_summary_196.jpg\n",
-      "✅ Alerta local guardada: interaccion_rumas - 18:15:02\n",
-      "Nueva ruma creada: ID 6\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-06_ruma_summary_198.jpg\n",
-      "✅ Alerta local guardada: variacion_rumas - 18:15:06\n",
-      "Procesados 200 frames\n",
-      "Rumas activas: 6\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-18_ruma_summary_204.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:15:18\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-15-59_ruma_summary_223.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:15:59\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-16-15_ruma_summary_230.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:16:15\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-16-24_ruma_summary_234.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:16:24\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-16-27_ruma_summary_236.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:16:27\n",
-      "Procesados 250 frames\n",
-      "Rumas activas: 6\n",
-      "Procesados 300 frames\n",
-      "Rumas activas: 6\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-19-42_ruma_summary_323.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:19:42\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-20-14_ruma_summary_338.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:20:14\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-20-22_ruma_summary_342.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:20:22\n",
-      "Procesados 350 frames\n",
-      "Rumas activas: 6\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-20-49_ruma_summary_355.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:20:49\n",
-      "💾 Save alert local ejecutándose\n",
-      "📄 Imagen resumen de rumas guardada en: alerts_save\\2025-07-12_local\\18-21-00_ruma_summary_360.jpg\n",
-      "✅ Alerta local guardada: movimiento_zona - 18:21:00\n",
-      "Procesamiento completado. Video guardado en video\\output\\video_cam3_0422\\output_video_cam3_0422_20250712_1807.mp4\n",
-      "Total de rumas detectadas: 6\n",
-      "\n",
-      "=== Resultados Finales ===\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def main():\n",
     "    start_time_sec = 0\n",
     "    end_time_sec = 12\n",
@@ -334,7 +153,7 @@
     "        model_seg_path=model_seg_path,\n",
     "        detection_zone=polygons,\n",
     "        camera_number=camera_number,\n",
-    "        camera_serials=camera_sn\n",
+    "        camera_sn=camera_sn\n",
     "    )\n",
     "\n",
     "    print(\"\\n=== Procesamiento finalizado correctamente ===\")\n",
