refactor: Enhance alert handling by updating API integration and improving error management

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -144,6 +144,8 @@
     "    model_det_path = 'models/model_detection.pt'\n",
     "    model_seg_path = 'models/model_segmentation.pt'\n",
     "\n",
+    "    api_url = \"https://fn-alma-mina.azurewebsites.net/api/alert\"  # URL de la API\n",
+    "\n",
     "    process_video(\n",
     "        video_path=input_video,\n",
     "        output_path=output_video,\n",
@@ -153,7 +155,8 @@
     "        model_seg_path=model_seg_path,\n",
     "        detection_zone=polygons,\n",
     "        camera_number=camera_number,\n",
-    "        camera_sn=camera_sn\n",
+    "        camera_sn=camera_sn,\n",
+    "        api_url=api_url  # URL de la API\n",
     "    )\n",
     "\n",
     "    print(\"\\n=== Procesamiento finalizado correctamente ===\")\n",
