refactor: Clean up import statements in Process_Video.ipynb

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -116,15 +116,8 @@
     "# Librerías propias\n",
     "from utils.paths import generar_output_video\n",
     "from libs.config_loader import load_camera_config\n",
-    "from libs.main_functions import process_video"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from libs.main_functions import process_video\n",
+    "\n",
     "def main():\n",
     "    start_time_sec = 0\n",
     "    end_time_sec = 12\n",
